--- a/spay/Beers Page/Xibs/BeerTableViewCell.xib
+++ b/spay/Beers Page/Xibs/BeerTableViewCell.xib
@@ -13,40 +13,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BeerTableViewCell" rowHeight="210" id="KGk-i7-Jjw" customClass="BeerTableViewCell" customModule="spay" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="354" height="210"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BeerTableViewCell" rowHeight="180" id="KGk-i7-Jjw" customClass="BeerTableViewCell" customModule="spay" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="354" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="354" height="209.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="354" height="179.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T5s-tO-NTN">
-                        <rect key="frame" x="30" y="30.5" width="40" height="150"/>
+                        <rect key="frame" x="15" y="15.5" width="40" height="150"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="0zB-fg-qXg"/>
                             <constraint firstAttribute="height" constant="150" id="k5r-nN-yru"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beer name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9G-U9-cXP">
-                        <rect key="frame" x="95" y="30.5" width="82.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beer name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9G-U9-cXP">
+                        <rect key="frame" x="80" y="15.5" width="87.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yo-kT-h54">
-                        <rect key="frame" x="95" y="53.5" width="51" height="19.5"/>
+                        <rect key="frame" x="80" y="38" width="51" height="20"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeo-H2-AQs">
-                        <rect key="frame" x="95" y="93" width="82.5" height="19.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Description" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeo-H2-AQs">
+                        <rect key="frame" x="80" y="93" width="82.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MORE INFO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gft-AQ-TOw">
-                        <rect key="frame" x="95" y="159.5" width="91" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="MORE INFO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gft-AQ-TOw">
+                        <rect key="frame" x="80" y="144.5" width="91" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" name="BackGroundOrange"/>
                         <nil key="highlightedColor"/>
@@ -54,25 +54,31 @@
                 </subviews>
                 <color key="backgroundColor" name="BackGroundDarkBlue"/>
                 <constraints>
-                    <constraint firstItem="Oeo-H2-AQs" firstAttribute="top" secondItem="5yo-kT-h54" secondAttribute="bottom" constant="20" id="1ZF-VE-u25"/>
-                    <constraint firstItem="T5s-tO-NTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="5Rv-Y3-FHS"/>
+                    <constraint firstItem="Oeo-H2-AQs" firstAttribute="top" secondItem="5yo-kT-h54" secondAttribute="bottom" constant="35" id="1ZF-VE-u25"/>
+                    <constraint firstItem="T5s-tO-NTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="5wf-b3-7af"/>
                     <constraint firstItem="Gft-AQ-TOw" firstAttribute="leading" secondItem="Oeo-H2-AQs" secondAttribute="leading" id="F0r-vl-w4U"/>
-                    <constraint firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" constant="30" id="I7b-d1-LDO"/>
                     <constraint firstItem="Oeo-H2-AQs" firstAttribute="leading" secondItem="5yo-kT-h54" secondAttribute="leading" id="LHW-4c-Yin"/>
                     <constraint firstItem="h9G-U9-cXP" firstAttribute="leading" secondItem="T5s-tO-NTN" secondAttribute="trailing" constant="25" id="Msl-EP-fw6"/>
                     <constraint firstItem="5yo-kT-h54" firstAttribute="top" secondItem="h9G-U9-cXP" secondAttribute="bottom" constant="2" id="N9Q-dP-Exc"/>
                     <constraint firstItem="5yo-kT-h54" firstAttribute="leading" secondItem="h9G-U9-cXP" secondAttribute="leading" id="P9Y-np-cHN"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Oeo-H2-AQs" secondAttribute="trailing" constant="80" id="RBf-e2-Bv3"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Oeo-H2-AQs" secondAttribute="trailing" constant="25" id="RBf-e2-Bv3"/>
                     <constraint firstItem="Gft-AQ-TOw" firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" id="a4a-Rv-LbL"/>
-                    <constraint firstItem="T5s-tO-NTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="aDP-RQ-i1a"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5yo-kT-h54" secondAttribute="trailing" constant="80" id="hxc-wy-Ikg"/>
+                    <constraint firstItem="T5s-tO-NTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="aDP-RQ-i1a"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5yo-kT-h54" secondAttribute="trailing" constant="25" id="hxc-wy-Ikg"/>
                     <constraint firstItem="h9G-U9-cXP" firstAttribute="top" secondItem="T5s-tO-NTN" secondAttribute="top" id="j0c-WP-fIA"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Gft-AQ-TOw" secondAttribute="trailing" constant="80" id="mMo-rz-cqC"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="h9G-U9-cXP" secondAttribute="trailing" constant="80" id="suV-26-oWO"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Gft-AQ-TOw" secondAttribute="trailing" constant="25" id="mMo-rz-cqC"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="h9G-U9-cXP" secondAttribute="trailing" constant="25" id="suV-26-oWO"/>
                     <constraint firstItem="Gft-AQ-TOw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Oeo-H2-AQs" secondAttribute="bottom" constant="2" id="tI3-wI-GxM"/>
+                    <constraint firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" constant="15" id="ziC-RS-NMz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="beerDescription" destination="Oeo-H2-AQs" id="KhF-mh-Cca"/>
+                <outlet property="beerImage" destination="T5s-tO-NTN" id="fmi-oY-upK"/>
+                <outlet property="name" destination="h9G-U9-cXP" id="gPj-EQ-zzn"/>
+                <outlet property="tagline" destination="5yo-kT-h54" id="ld7-dJ-3PH"/>
+            </connections>
             <point key="canvasLocation" x="162.31884057971016" y="193.52678571428569"/>
         </tableViewCell>
     </objects>
